# lyricue

./: .eslintrc.json  .gitignore  .gitmodules  .prettierrc.yaml  AGENTS.md  HANDOFF.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.workspace.ts
.github/workflows/: ci.yml  release-matrix.yml
_bmad-output/: PRD.md  architecture.md  epics.md  freeshow-upstream-discussion-draft.md  product-brief.md
apps/fork/: package.json  tsconfig.json  tsconfig.scripts.json  vitest.config.ts
apps/sister/: package.json  tsconfig.json  tsconfig.preload.json  vite.config.mjs  vite.config.operator.mjs  (+1 more)
docs/: ep08-stt-binding-contract.md  library-setup.md  project-completion-roadmap-2026-05-19.md  release-signoff-checklist.md
python-sidecar/: README.md  build.py  pyinstaller_entry.py  pyproject.toml
python-sidecar/lyricue_sidecar/: __init__.py  __main__.py  audio_decode.py  bpm.py  forced_alignment.py  jobs.py  learning.py  methods.py  model_download.py  protocol.py  rehearsal.py  timing_map.py  vocal_isolation.py
python-sidecar/scripts/: smoke_packaged_learn_song.py  stage_release_models.py
python-sidecar/tests/: test_audio_decode.py  test_build.py  test_entry.py  test_forced_alignment.py  test_learning.py  test_learning_production_fixture.py  test_methods.py  test_model_download.py  test_protocol.py  test_protocol_adversarial.py  test_rehearsal.py  test_smoke_packaged_learn_song.py  test_stage_release_models.py  test_vocal_isolation.py
python-sidecar/tests/fixtures/ep05-public-domain/: README.md
(+179 files in other folders)
